# biovoice_research

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/latest_run/: README.md  baseline_comparison.csv  dataset_review.json  decision_path_summary.csv  error_summary.csv  joint_classwise_metrics.csv  (+7 more)
configs/: asvspoof2021_la.yaml  default.yaml  default_mps.yaml  private_corpus_template.yaml
docs/: alpha_approval_guide.md  architecture.md  data_protocol.md  evaluation_protocol.md  explainability.md  metrics_explained.md  mission_results_report.md  model_design.md  plots_guide.md  preprocessing.md  project_overview.md  real_data_onboarding.md  reproducibility.md  training_plan.md
notebooks/: 01_problem_and_data_overview.ipynb  02_preprocessing_and_quality_checks.ipynb  03_baseline_models.ipynb  04_joint_model_training_review.ipynb  05_evaluation_dashboard.ipynb  06_explainability_case_studies.ipynb  07_ablation_study.ipynb  08_supervisor_walkthrough.ipynb
scripts/: check_mps.py  evaluate_models.py  export_tables.py  generate_all_plots.py  generate_supervisor_report.py  import_asvspoof2021_la.py  import_real_dataset.py  inspect_data.py  prepare_data.py  resume_joint_scoring.py  run_ablation.py  train_baseline_spoof.py  train_baseline_sv.py  train_joint_model.py
tests/: test_enrollment.py  test_explainability_outputs.py  test_joint_analysis.py  test_metrics.py  test_plots_and_reports.py  test_preprocessing.py  test_private_corpus_workflow.py  test_quality_checks.py  test_segmentation.py  test_smoke_pipeline.py  test_thresholding.py
(+86 files in other folders)
